parte do post/create concluida

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <h1>{{title}}</h1>
 
     <nav>
-    <a routerLink="/">Index</a>
-    <a routerLink="/User">Home</a>
+    <ul>    
+    <a routerLink="/">index</a>,   
+    <a routerLink="/User">Listar Usuarios</a>,  
+    <a routerLink="/User/create">Criar Usuarios</a>    
+    </ul>
     </nav>
 <router-outlet></router-outlet>
