--- a/src/app/crud/create-usuario/create-usuario.component.html
+++ b/src/app/crud/create-usuario/create-usuario.component.html
@@ -1,14 +1,22 @@
-<h2>Create User</h2>
-
-
-<div>
-<label for=""> Nome
-<input name="nome" [(ngModel)]="request.name">
-</label>
+<h2 class="ml-3 text-light">Criar usuário</h2>
 <br>
-<label for=""> Sobrenome
-    <input name="sobrenome"  [(ngModel)]="request.job">   
-</label>
-<p><button (click)="save()">Criar</button>
-<button (click)="cancel()">Cancelar</button></p>
-</div>
+<form >
+    <div class="ml-2">
+    <div class="form-group row mx-auto">
+        <label class="text-white col-sm-1 col-form-label" for=""> Nome </label>
+        <div class="col-sm-5">
+            <input class="form-control position-absolute"  name="nome" [(ngModel)]="request.name">  
+        </div>
+    </div>
+    <div class="form-group row mx-auto">
+        <label class="text-white col-sm-1 col-form-label" for=""> Sobrenome </label>
+        <div class="col-sm-5">
+            <input class="form-control position-absolute" name="sobrenome"  [(ngModel)]="request.job">
+        </div>
+    </div>
+    <div class="btn-group ml-3" role="group" aria-label="Basic example">
+        <button (click)="save()" class="btn btn-outline-secondary text-white">Criar</button>
+        <button (click)="cancel()" class="btn btn-outline-danger">Cancelar</button>
+    </div>
+    </div>
+</form>
