--- a/src/app/crud/user.component.html
+++ b/src/app/crud/user.component.html
@@ -1,17 +1,17 @@
-<h1>Usuários</h1>
-
-<table *ngIf="respostaUser">
+<h1 class="ml-3 text-white">Lista de usuários</h1>
+<table class="table table-dark table-striped " *ngIf="respostaUser">
     <thead>
-        <td>Nome</td>
-        <td>Sobrenome</td>
-        <td>Opções</td>
+        <td scope="col">Nome</td>
+        <td scope="col">Sobrenome</td>
+        <td scope="col">Opções</td>
     </thead>
     <tbody>
-        <tr *ngFor="let user of respostaUser.data">
-            <td>{{user.first_name}}</td>
-            <td>{{user.last_name}}</td>
-            <td><a routerLink="/User/update/{{user.id}}">Editar</a> |
-            <a routerLink="/User/delete/{{user.id}}">Deletar</a></td>
+        <tr  *ngFor="let user of respostaUser.data">
+            <td scope="row">{{user.first_name}}</td>
+            <td scope="row">{{user.last_name}}</td>
+            <td scope="row"><a routerLink="/User/update/{{user.id}}" class="btn btn-outline-light mr-2 pl-3 pr-3" >Editar</a>
+            <a routerLink="/User/delete/{{user.id}}" class="btn btn-outline-danger">Deletar</a></td>
         </tr>
     </tbody>    
 </table>
+
